# CMakePresentation

./: .gitignore  PreBuild Systems.pptx  README.md
Examples/01. HelloWorld/: CMakeLists.txt
Examples/01. HelloWorld/src/myExe/: main.cpp
Examples/01. HelloWorld/src/myLib/: CMakeLists.txt  myLib.cpp
Examples/02. ExternalLibs/: CMakeLists.txt
Examples/02. ExternalLibs/extern_libs/: CMakeLists.txt
Examples/02. ExternalLibs/src/: CMakeLists.txt
Examples/02. ExternalLibs/src/myExe/: CMakeLists.txt
Examples/02. ExternalLibs/src/myLib/: CMakeLists.txt  myLib.cpp
Examples/03. CleaningUp/: CMakeLists.txt
Examples/03. CleaningUp/src/myExe/: CMakeLists.txt
Examples/03. CleaningUp/src/myLib/: CMakeLists.txt  myLib.cpp  myLib.hpp
Examples/04. MyFirstFunction/src/myExe/: CMakeLists.txt
Examples/05. AddACommand/: CMakeLists.txt
Examples/05. AddACommand/extern_libs/: CMakeLists.txt
Examples/05. AddACommand/src/myExe/: CMakeLists.txt
Examples/05. AddACommand/src/myLib/: CMakeLists.txt
Examples/06. Advanced Topic - Multitarget Functions/: MultiTargetFunctionExample.cmake
Examples/06. AdvancedTopic-MultitargetFunctions/: MultiTargetFunctionExample.cmake
Examples/07. AdvancedTopic-Source Group/: YTE_Source_Group.cmake
Examples/08. AdvancedTopic-ExternalLib-NoSourceSln/: ExampleExternalLibsSln.cmake
Examples/10. AdvancedTopic-Precompiled/: Precompiled.cmake
Examples/11. BonusTopic-PrototypeOfZeroPlatfromCMakeFiles/CommonFlags/: MSVC_Flags.cmake
Examples/11. BonusTopic-PrototypeOfZeroPlatfromCMakeFiles/Configuration/: VS_LLVM_2014.cmake  VS_LLVM_2014_SDLSTLEmpty.cmake  Windows_Emscripten.cmake  Windows_VS_2015.cmake  Windows_VS_2015_SDLSTLEmpty.cmake
